--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "hardhat": "^2.17.1",
     "solc": "^0.6.4",
     "web3": "^1.2.6"
   }
