--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@openzeppelin/contracts": "^4.9.3",
+    "fs": "^0.0.1-security",
     "hardhat": "^2.17.1",
-    "solc": "^0.6.4",
     "web3": "^1.2.6"
   }
 }
